--- a/src/events-app/events-app.component.html
+++ b/src/events-app/events-app.component.html
@@ -1,6 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome {{ title }}
-  </h1>
+<div>
+  <app-navbar></app-navbar>
+  <app-events-list></app-events-list>
 </div>
