--- a/src/events-app/event-thumbnail/event-thumbnail.component.html
+++ b/src/events-app/event-thumbnail/event-thumbnail.component.html
@@ -1,12 +1,22 @@
 <div class="well hoverwell thumbnail">
   <h2>{{event.name}}</h2>
   <div>Date: {{ event.date }}</div>
-  <div>Time: {{ event.time }}</div>
+
+  <div
+    [class.green]="event?.time === '8:00 am'"
+    [ngSwitch]="event?.time"
+  >
+      <span>Time: {{ event.time }} </span>
+      <span *ngSwitchCase="'8:00 am'">(Early Start)</span>
+      <span *ngSwitchCase="'9:00 am'">(Normal Start)</span>
+      <span *ngSwitchDefault>(Late Start)</span>
+  </div>
   <div>Price: {{ event.price }}</div>
-  <div>
-    <span>Address: {{event.address.address1 }} {{event.address.city}}
-      <span class="highlight">{{event.address.postcode}}</span>
+  <div [hidden]="!event?.location">
+    <span>Address: {{event.location?.address }} {{event.location?.city}}
+      <span class="highlight">{{event.location?.country}}</span>
     </span>
   </div>
+  <div *ngIf="event.online">Online: {{event.online}}</div>
   <button class="btn btn-primary" (click)="handleClick()">Click</button>
 </div>
