--- a/src/events-app/events/events-list.component.html
+++ b/src/events-app/events/events-list.component.html
@@ -7,6 +7,7 @@
     *ngFor="let event of events"
   >
     <app-event-thumbnail
+      (click)="handleEventClicked(event)"
       [event]="event"
       (eventClick)="handleEventClicked($event)"
     >
