--- a/src/events-app/events-app.component.html
+++ b/src/events-app/events-app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
   <app-navbar></app-navbar>
-  <app-events-list></app-events-list>
+  <router-outlet></router-outlet>
+<!--  <app-events-list></app-events-list>-->
 </div>
