--- a/src/events-app/event-details/event-details.component.html
+++ b/src/events-app/event-details/event-details.component.html
@@ -24,5 +24,6 @@
         {{event?.location?.city}}, {{event?.location?.country}}
       </address>
     </div>
+    <button class="btn btn-primary" (click)="editEvent()">Edit</button>
   </div>
 </div>
