--- a/src/events-app/event-details/event-details.component.html
+++ b/src/events-app/event-details/event-details.component.html
@@ -24,6 +24,33 @@
         {{event?.location?.city}}, {{event?.location?.country}}
       </address>
     </div>
-    <button class="btn btn-primary" (click)="editEvent()">Edit</button>
+    <hr />
+    <div class="row">
+      <div class="col-md-2">
+        <h3>Sessions</h3>
+      </div>
+      <div class="col-md-2">
+        <a (click)="addSession()">Add</a>
+      </div>
+    </div>
+    <session-list
+      *ngIf="!addMode"
+      [sessions]="event?.sessions"
+    ></session-list>
+
+    <create-sesion
+      *ngIf="addMode"
+      (saveNewSession)="saveNewSession($event)"
+      (cancelNewSession)="cancelNewSession()"
+    >
+
+    </create-sesion>
+    <button
+      *ngIf="!addMode"
+      class="btn btn-primary"
+      (click)="editEvent()"
+    >
+      Edit
+    </button>
   </div>
 </div>
