--- a/src/events-app/session-create/session-create.component.html
+++ b/src/events-app/session-create/session-create.component.html
@@ -89,6 +89,10 @@
       class="btn btn-primary"
       [disabled]="newSessionForm.invalid"
     >Save</button>
-    <button type="button" class="btn btn-default">Cancel</button>
+    <button
+      type="button"
+      class="btn btn-default"
+      (click)="cancelNewSessionHandler()"
+    >Cancel</button>
   </form>
 </div>
