--- a/src/events-app/event-thumbnail/event-thumbnail.component.html
+++ b/src/events-app/event-thumbnail/event-thumbnail.component.html
@@ -1,6 +1,6 @@
 <div class="well hoverwell thumbnail">
-  <h2>{{event.name}}</h2>
-  <div>Date: {{ event.date }}</div>
+  <h2>{{event.name | uppercase }}</h2>
+  <div>Date: {{ event.date | date : 'dd/MM/yyyy' }}</div>
 
   <div
     [class.green]="event?.time === '8:00 am'"
@@ -11,7 +11,7 @@
       <span *ngSwitchCase="'9:00 am'">(Normal Start)</span>
       <span *ngSwitchDefault>(Late Start)</span>
   </div>
-  <div>Price: {{ event.price }}</div>
+  <div>Price: {{ event.price | currency : 'GBP' }}</div>
   <div [hidden]="!event?.location">
     <span>Address: {{event.location?.address }} {{event.location?.city}}
       <span class="highlight">{{event.location?.country}}</span>
