--- a/src/events-app/event-details/event-details.component.html
+++ b/src/events-app/event-details/event-details.component.html
@@ -29,12 +29,43 @@
       <div class="col-md-2">
         <h3>Sessions</h3>
       </div>
+      <div class="col-md-7">
+        <button
+          (click)="applyFilter('All')"
+          [class.active]="filterBy === 'All'"
+          class="btn btn-default"
+        >
+          All
+        </button>
+        <button
+          (click)="applyFilter('Beginner')"
+          [class.active]="filterBy === 'Beginner'"
+          class="btn btn-default"
+        >
+          Beginner
+        </button>
+        <button
+          (click)="applyFilter('Intermediate')"
+          [class.active]="filterBy === 'Intermediate'"
+          class="btn btn-default"
+        >
+          Intermediate
+        </button>
+        <button
+          (click)="applyFilter('Advanced')"
+          [class.active]="filterBy === 'Advanced'"
+          class="btn btn-default"
+        >
+          Advanced
+        </button>
+      </div>
       <div class="col-md-2">
         <a (click)="addSession()">Add</a>
       </div>
     </div>
     <session-list
       *ngIf="!addMode"
+      [filterBy]="filterBy"
       [sessions]="event?.sessions"
     ></session-list>
 
