di for toastr service and added it to the profile save

--- a/src/events-app/events/events-list.component.html
+++ b/src/events-app/events/events-list.component.html
@@ -7,10 +7,9 @@
     *ngFor="let event of events"
     [routerLink]="['/events', event.id]"
   >
+<!--    (click)="handleEventClicked(event)" (eventClick)="handleEventClicked($event)"-->
     <app-event-thumbnail
-      (click)="handleEventClicked(event)"
       [event]="event"
-      (eventClick)="handleEventClicked($event)"
     >
     </app-event-thumbnail>
   </div>
