--- a/src/events-app/event-create/event-create.component.html
+++ b/src/events-app/event-create/event-create.component.html
@@ -25,7 +25,7 @@
       <input [(ngModel)]="event.price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
 
-    <div ngModelGroup="location" *ngIf="event.location">
+    <div ngModelGroup="location" *ngIf="event.location" validateLocation>
       <div class="form-group">
         <label for="address">Event Location:</label>
         <input [(ngModel)]="event.location.address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
