--- a/src/events-app/session-list/session-list.component.html
+++ b/src/events-app/session-list/session-list.component.html
@@ -1,9 +1,16 @@
 <div class="row" *ngFor="let session of filteredSessions">
+  <div class="col-md-1">
+    <upvote
+      (vote)="toggleVote(session)"
+      [count]="session?.voters.length"
+      [voted]="userHasVoted(session)"
+    >
+    </upvote>
+  </div>
   <div class="col-md-10">
     <collapsible-well>
       <div class="title">
         {{session.name}}
-
         <i
           *ngIf="session.voters.length > 3"
           class="glyphicon glyphicon-fire"
